# dp100_ds_associate_azure

./: .gitignore  environment.yml  hello.py  pyproject.toml
1_13_clustering_models/: 1_13_1_clustering_models_1.ipynb
1_8_classification/: 1_8_1_classification.ipynb  1_8_2_multiple_regression.ipynb
1_9_hyperparameters_and_architecture/: 1_9_2_hyperparams_desicion_trees.ipynb
1_ml_foundations/1_10_confusion_matrix_classification/: 1_10_1_cnfusion_matrix.ipynb  1_10_2_ROC_curves.ipynb
1_ml_foundations/1_11_ROC_curves/: 1_11_1_roc_curves.ipynb
1_ml_foundations/1_12_train_classification/: 1_12_1_binary_classification.ipynb  1_12_2_multiclass_classification_models.ipynb
1_ml_foundations/module_1_1_and_1_2_intro_ml_and_supervised/: 1_intro_unit_9.ipynb  supervised_gradient_descent.ipynb
1_ml_foundations/module_1_3_6_one_hot_encoding/: titanic_prediction_one_hot_encoding.ipynb
1_ml_foundations/module_1_3_data_preparation/: 1_3_5_categorical_data.ipynb  eda_titanic.ipynb
1_ml_foundations/module_1_5_linear_regression/: 1_5_1_linear_regression.ipynb  1_5_2_multiple_linear_regression.ipynb  1_5_3_polynomial_regression.ipynb
1_ml_foundations/module_1_6_tuning/: 1_6_1_scaling.ipynb  1_6_2_test_train_split.ipynb
3_module_2_experiment_ml_flow/: 2_3_1_azureml_datastores.ipynb
3_module_2_experiment_ml_flow/diabetes_mltable/: MLTable
module_1_1/: 1_1_1_doggy_boots.ipynb  avalanche_dog_boot_model.pkl  students_data_pandas.ipynb
module_1_3/: eda_titanic.ipynb
module_1_4_2_eda_numpy_pandas/: module_1_4_1_eda_numpy_pandas.ipynb  module_1_4_2_plots.ipynb
(+9 files in other folders)
